feat: add swagger documentation for User creation route
